Show list vocabulary

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="action_submit">Nộp bài</string>
     <string name="title_auto_next">Tự động chuyển</string>
     <string name="action_test">Kiểm tra</string>
-    <string name="title_lesson">Bài </string>
+    <string name="title_lesson">Bài\u0020</string>
+    <string name="title_question">Câu\u0020</string>
+    <string name="title_vocabulary_question">\u0020 có nghĩa là?</string>
 </resources>
