--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,8 @@
         cõ thể học ngay cả khi lường biếng nhất,</string>
     <string name="button_intro_1">Tiếp</string>
     <string name="button_intro_2">Bắt Đầu</string>
+    <string name="title_start">Start</string>
+    <string name="title_name_user">Tên của bạn</string>
+    <string name="title_target_user">Mục tiêu:</string>
+    <string name="title_score">600</string>
 </resources>
