--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="action_test">Kiểm tra</string>
     <string name="title_lesson">Bài\u0020</string>
     <string name="title_question">Câu\u0020</string>
-    <string name="title_vocabulary_question">\u0020 có nghĩa là?</string>
+    <string name="title_vocabulary_question">\u0020có nghĩa là?</string>
     <string name="title_mark">Đạt:</string>
     <string name="title_time">Thời gian:</string>
     <string name="title_reading">Đọc:</string>
@@ -32,8 +32,8 @@
     <string name="title_very_good">Xuất sắc</string>
     <string name="title_good">Tốt</string>
     <string name="title_normal">Bình thường</string>
-    <string name="title_bad">Kém</string>
-    <string name="title_very_bad">Rất kém</string>
+    <string name="title_bad">Cần cố gắng hơn</string>
+    <string name="title_very_bad">Cần cố gắng hơn nữa</string>
     <string name="title_intro_1">KHÔNG CẦN MÁY TÍNH</string>
     <string name="title_intro_2">HỌC KHI ĂN</string>
     <string name="title_intro_3">HỌC KHI NGỦ</string>
@@ -45,8 +45,22 @@
         cõ thể học ngay cả khi lường biếng nhất,</string>
     <string name="button_intro_1">Tiếp</string>
     <string name="button_intro_2">Bắt Đầu</string>
-    <string name="title_start">Start</string>
     <string name="title_name_user">Tên của bạn</string>
     <string name="title_target_user">Mục tiêu:</string>
     <string name="title_score">600</string>
+    <string name="title_start">Start</string>
+    <string name="notification_empty">Chọn ít nhất 1 bài</string>
+    <string name="title_dialog_user">Cập nhật thông tin</string>
+    <string name="title_name">Họ và tên</string>
+    <string name="hint_name">Tên của bạn</string>
+    <string name="title_target">Mục tiêu</string>
+    <string name="hint_target">600</string>
+    <string name="action_save">Lưu</string>
+    <string name="action_cancel">Hủy</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_part">Part:</string>
+    <string name="key_name">name</string>
+    <string name="key_target">target</string>
+    <string name="data">data_user</string>
+    <string name="check_first_app">firt_app</string>
 </resources>
