--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="action_save">Lưu</string>
     <string name="action_cancel">Hủy</string>
     <string name="title_part">Phần:</string>
+    <string name="error_audio">Âm thanh không thể khởi chạy</string>
 </resources>
