--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="title_part">Phần:</string>
     <string name="error_audio">Âm thanh không thể khởi chạy</string>
     <string name="hint_target">Mục tiêu của bạn</string>
+    <string name="toast_forget_check">Bạn chưa chọn chủ đề nào!</string>
 </resources>
