--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="error_audio">Âm thanh không thể khởi chạy</string>
     <string name="hint_target">Mục tiêu của bạn</string>
     <string name="toast_forget_check">Bạn chưa chọn chủ đề nào!</string>
+    <string name = "facebook_app_id" > 1005167796338475 </string>
 </resources>
